fixed img boxing and list items

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div class="container">
 
-  <div>
+  <div class="dog">
     <img src="/Users/treywilliams/momentum-assignments/build-a-dog-adoption-website-Flyernav/starter_files/images/beans.jpg" alt="Beans"> 
     <h3>Beans</h3>
     <ul>
@@ -37,7 +37,7 @@
     </ul>  
   </div>
  
-  <div>
+  <div class="dog">
     <img src="/Users/treywilliams/momentum-assignments/build-a-dog-adoption-website-Flyernav/starter_files/images/boston-terrier.jpg" alt="Zelda">
     <h3>Zelda</h3>
     <ul>
@@ -51,7 +51,7 @@
 
   </div>
   
-  <div>
+  <div class="dog">
     <img src="/Users/treywilliams/momentum-assignments/build-a-dog-adoption-website-Flyernav/starter_files/images/boxer.jpg" alt="Baby"> 
     <h3>Baby</h3>
     <ul>
@@ -64,7 +64,7 @@
     </ul>  
   </div>
   
-  <div>
+  <div class="dog">
     <img src="/Users/treywilliams/momentum-assignments/build-a-dog-adoption-website-Flyernav/starter_files/images/golden-lab.jpg" alt="Tom-Tom"> 
     <h3>Tom-Tom</h3>
     <ul>
@@ -78,7 +78,7 @@
     </ul>  
   </div>
   
-  <div>
+  <div class="dog">
     <img src="/Users/treywilliams/momentum-assignments/build-a-dog-adoption-website-Flyernav/starter_files/images/little-dog.jpg" alt="Marco"> 
     <h3>Marco</h3>
     <ul>
@@ -89,7 +89,7 @@
     </ul>  
   </div>
   
-  <div>
+  <div class="dog">
     <img src="/Users/treywilliams/momentum-assignments/build-a-dog-adoption-website-Flyernav/starter_files/images/old-shaggy.jpg" alt="Shackleton"> 
     <h3>Shackleton</h3>
     <ul>
@@ -103,7 +103,7 @@
     </ul>  
   </div>
 
-  <div>
+  <div class="dog">
     <img src="/Users/treywilliams/momentum-assignments/build-a-dog-adoption-website-Flyernav/starter_files/images/shih-tzu.jpg" alt="Midge"> 
     <h3>Midge</h3>
     <ul>
@@ -115,7 +115,7 @@
     </ul>  
   </div>
 
-  <div>
+  <div class="dog">
     <img src="/Users/treywilliams/momentum-assignments/build-a-dog-adoption-website-Flyernav/starter_files/images/young-bulldog.jpg" alt="Ladybird"> 
     <h3>Ladybird</h3>
     <ul>
@@ -130,7 +130,7 @@
     </ul>  
   </div>
 
-  <div>
+  <div class="dog">
     <img src="/Users/treywilliams/momentum-assignments/build-a-dog-adoption-website-Flyernav/starter_files/images/young-peppy.jpg" alt="Mina"> 
     <h3>Mina</h3>
     <ul>
@@ -145,6 +145,21 @@
   </div>
 
 </div>
+
+<footer>
+  <div class="donate">
+  <img class="foot" src="/Users/treywilliams/momentum-assignments/build-a-dog-adoption-website-Flyernav/starter_files/images/donate.jpg" alt="Donation">
+  <p>Donate</p>
+  </div>
+  <div class="volunteer">
+  <img class="foot" src="/Users/treywilliams/momentum-assignments/build-a-dog-adoption-website-Flyernav/starter_files/images/volunteer.jpg" alt="Volunteer">
+  <p>Volunteer</p>
+  </div>
+  <div class="location">  
+  <img class="foot" src="/Users/treywilliams/momentum-assignments/build-a-dog-adoption-website-Flyernav/starter_files/images/location.png" alt="Location">
+  <p>Our Location</p>
+  </div>
+</footer>
 
 
 </body>
