98 percent done needs font adjustment

--- a/index.html
+++ b/index.html
@@ -146,20 +146,19 @@
 
 </div>
 
-<footer>
-  <div class="donate">
-  <img class="foot" src="/Users/treywilliams/momentum-assignments/build-a-dog-adoption-website-Flyernav/starter_files/images/donate.jpg" alt="Donation">
-  <p>Donate</p>
+<div class="footer">
+ <div id="donate">
+  <div class="footer-text">Donate</div>
   </div>
-  <div class="volunteer">
-  <img class="foot" src="/Users/treywilliams/momentum-assignments/build-a-dog-adoption-website-Flyernav/starter_files/images/volunteer.jpg" alt="Volunteer">
-  <p>Volunteer</p>
+  
+  <div id="volunteer">
+  <div class="footer-text">Volunteer</div>
   </div>
-  <div class="location">  
-  <img class="foot" src="/Users/treywilliams/momentum-assignments/build-a-dog-adoption-website-Flyernav/starter_files/images/location.png" alt="Location">
-  <p>Our Location</p>
+
+  <div id="location">  
+  <div class="footer-text">Our Location</div>
   </div>
-</footer>
+</div>
 
 
 </body>
